--- a/assets/common.css
+++ b/assets/common.css
@@ -1,4 +1,4 @@
-body{background-color: black;
+body{background-color: black; padding: 20px;
 }
 
 .face1{
@@ -20,3 +20,6 @@ body{background-color: black;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
+.navbar{
+    position: absolute;
