--- a/assets/common.css
+++ b/assets/common.css
@@ -21,5 +21,132 @@ body{background-color: black; padding: 20px;
     left: 50%;
     transform: translate(-50%, -50%);
 
-.navbar{
-    position: absolute;
+   
+        font-family: "Trebuchet", "Trebuchet", sans-serif;
+      
+        overflow-x: hidden;
+      }
+      
+      a {
+        text-decoration: none;
+        color: #232323;
+      
+        transition: color 0.3s ease;
+      }
+      
+      a:hover {
+        color: blue;
+      }
+      
+      #menuToggle {
+        display: block;
+        position: absolute;
+        top: 50px;
+        right: 50px;
+      
+        z-index: 1;
+      
+        user-select: none;
+        user-select: none;
+      }
+      
+      #menuToggle input {
+        display: block;
+        width: 40px;
+        height: 32px;
+        position: absolute;
+        top: -7px;
+        left: -5px;
+      
+        cursor: pointer;
+      
+        opacity: 0;
+        z-index: 2;
+      
+        --touch-callout: none;
+      }
+      
+      #menuToggle span {
+        display: block;
+        width: 33px;
+        height: 4px;
+        margin-bottom: 5px;
+        position: relative;
+      
+        background: #cdcdcd;
+        border-radius: 3px;
+      
+        z-index: 1;
+      
+        transform-origin: 4px 0px;
+      
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+          background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+          opacity 0.55s ease;
+      }
+      
+      #menuToggle span:first-child {
+        transform-origin: 0% 0%;
+      }
+      
+      #menuToggle span:nth-last-child(2) {
+        transform-origin: 0% 100%;
+      }
+      
+      #menuToggle input:checked~span {
+        opacity: 1;
+        transform: rotate(45deg) translate(-2px, -1px);
+        background: #232323;
+      }
+      
+      
+      #menuToggle input:checked~span:nth-last-child(3) {
+        opacity: 0;
+        transform: rotate(0deg) scale(0.2, 0.2);
+      }
+      
+      
+      #menuToggle input:checked~span:nth-last-child(2) {
+        opacity: 1;
+        transform: rotate(-45deg) translate(0, -1px);
+      }
+      
+      #menu {
+        position: absolute;
+        width: 300px;
+        margin: -100px 0 0 0;
+        padding: 50px;
+        padding-top: 125px;
+        right: -100px;
+      
+        background: #ededed;
+        list-style-type: none;
+        -webkit-font-smoothing: antialiased;
+      
+      
+        transform-origin: 0% 0%;
+        transform: translate(100%, 0);
+      
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+      }
+      
+      #menu li {
+        padding: 10px 0;
+        font-size: 22px;
+      }
+      
+      
+      #menuToggle input:checked~ul {
+        transform: none;
+        opacity: 1;
+      }
+      
+      @media screen and (max-width: 768px) {
+        #menu {
+          transform: none;
+          opacity: 0;
+      
+          transition: opacity 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+        }
+      }
+      
