Added centred Preface column to HTML

--- a/assets/common.css
+++ b/assets/common.css
@@ -1,13 +1,13 @@
-body{background-color: black; padding: 20px;
+body{background-color: rgb(202, 190, 190); padding: 20px;
 }
 
-.face1{
+.face1 {
+  
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
-
+} 
 .face2{
     position: absolute;
     top: 50%;
