--- a/assets/common.css
+++ b/assets/common.css
@@ -1,4 +1,4 @@
-body{background-color: rgb(202, 190, 190); padding: 20px;
+body{background-color: rgb(0, 0, 0); padding: 20px;
 }
 
 .face1 {
@@ -27,6 +27,10 @@ body{background-color: rgb(202, 190, 190); padding: 20px;
         overflow-x: hidden;
       }
       
+    p{
+      font-family: 'Source Code Pro', monospace;
+    }
+    
       a {
         text-decoration: none;
         color: #232323;
