--- a/assets/common.css
+++ b/assets/common.css
@@ -28,7 +28,13 @@ body{background-color: rgb(0, 0, 0); padding: 20px;
       }
       
     p{
-      font-family: 'Source Code Pro', monospace;
+      font-family: 'Source Code Pro', monospace; font-size: 15px; line-height: 1.6;
+      padding-left: 35px; padding-right: 35px;
+    }
+
+    h2{font-family: 'Italiana', serif; font-size: 25px;
+      padding-left: 35px; padding-right: 35px;
+      
     }
     
       a {
