--- a/assets/common.css
+++ b/assets/common.css
@@ -1,6 +1,14 @@
 body{background-color: rgb(255, 255, 255); padding: 0px;
 }
 
+.logo{ 
+	position:fixed; 
+  width: 5px;
+  height: 3px;
+	top:0; 
+	left:0; 
+}
+
 .face1 {
   
     position: absolute;
@@ -20,11 +28,6 @@ body{background-color: rgb(255, 255, 255); padding: 0px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
-   
-        font-family: "Trebuchet", "Trebuchet", sans-serif;
-      
-        overflow-x: hidden;
       }
       
     p{
@@ -73,7 +76,6 @@ body{background-color: rgb(255, 255, 255); padding: 0px;
         opacity: 0;
         z-index: 2;
       
-        --touch-callout: none;
       }
       
       #menuToggle span {
@@ -83,12 +85,12 @@ body{background-color: rgb(255, 255, 255); padding: 0px;
         margin-bottom: 5px;
         position: relative;
       
-        background: #cdcdcd;
+        background: #ffffff;
         border-radius: 3px;
       
         z-index: 1;
       
-        transform-origin: 4px 0px;
+        transform-origin: 3px 0px;
       
         transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
           background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
@@ -129,7 +131,7 @@ body{background-color: rgb(255, 255, 255); padding: 0px;
         padding-top: 125px;
         right: -100px;
       
-        background: #ededed;
+        background: #ffffff;
         list-style-type: none;
         -webkit-font-smoothing: antialiased;
       
