--- a/assets/common.css
+++ b/assets/common.css
@@ -166,3 +166,118 @@ html {
         }
       }
       
+      .slider-container {
+        background: linear-gradient(
+          149deg,
+         
+        );
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+      }
+      
+      .slider {
+        width: 100%;
+        max-width: 1000px;
+        height: 400px;
+        margin: 60px;
+        text-align: center;
+        border-radius:0px;
+        overflow: hidden;
+        position: relative;
+      }
+      
+      .slides {
+        display: flex;
+        overflow-x: scroll;
+        position: relative;
+        scroll-behavior: smooth;
+        scroll-snap-type: x mandatory;
+      }
+      
+      .slide:nth-of-type(even) {
+        background-color: rgba(255, 255, 255, 0.415);
+      }
+      
+      .slide {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-shrink: 0;
+        width: 100%;
+        height: 400px;
+        scroll-snap-align: center;
+        margin-right: 0px;
+        box-sizing: border-box;
+        background: white;
+        transform-origin: center center;
+        transform: scale(1);
+      }
+      
+      .slide__text {
+        font-size: 40px;
+        font-weight: bold;
+        font-family: sans-serif;
+      }
+      
+      .slide a {
+        background: none;
+        border: none;
+      }
+      
+      a.slide__prev,
+      .slider::before {
+        transform: rotate(135deg);
+        -webkit-transform: rotate(135deg);
+        left: 5%;
+      }
+      
+      a.slide__next,
+      .slider::after {
+        transform: rotate(-45deg);
+        -webkit-transform: rotate(-45deg);
+        right: 5%;
+      }
+      
+      .slider::before,
+      .slider::after,
+      .slide__prev,
+      .slide__next {
+        position: absolute;
+        top: 48%;
+        width: 15px;
+        height: 15px;
+        border: solid black;
+        border-width: 0 2px 2px 0;
+        padding: 0px;
+        box-sizing: border-box;
+      }
+      
+      .slider::before,
+      .slider::after {
+        content: "";
+        z-index: 1;
+        background: none;
+        pointer-events: none;
+      }
+      
+      .slider__nav {
+        box-sizing: border-box;
+        position: absolute;
+        bottom: 5%;
+        left: 50%;
+        width: 1000px;
+        margin-left: -100px;
+        text-align: center;
+      }
+      
+      .slider__navlink {
+        display: inline-block;
+        height: 15px;
+        width: 15px;
+        border-radius: 50%;
+        background-color: black;
+        margin: 0 10px 0 10px;
+      }
+      
