--- a/assets/common.css
+++ b/assets/common.css
@@ -209,8 +209,7 @@ html {
         height: 400px;
         scroll-snap-align: center;
         margin-right: 0px;
-        box-sizing: border-box;
-        background: white;
+        background: rgb(255, 252, 244);
         transform-origin: center center;
         transform: scale(1);
       }
@@ -245,11 +244,11 @@ html {
       .slide__prev,
       .slide__next {
         position: absolute;
-        top: 48%;
-        width: 15px;
-        height: 15px;
-        border: solid black;
-        border-width: 0 2px 2px 0;
+        top: 35%;
+        width: 20px;
+        height: 20px;
+        border: solid rgb(5, 59, 237);
+        border-width: 0 3px 3px 0;
         padding: 0px;
         box-sizing: border-box;
       }
@@ -267,17 +266,7 @@ html {
         position: absolute;
         bottom: 5%;
         left: 50%;
-        width: 1000px;
+        width: 900px;
         margin-left: -100px;
         text-align: center;
       }
-      
-      .slider__navlink {
-        display: inline-block;
-        height: 15px;
-        width: 15px;
-        border-radius: 50%;
-        background-color: black;
-        margin: 0 10px 0 10px;
-      }
-      
