--- a/assets/common.css
+++ b/assets/common.css
@@ -59,7 +59,7 @@ html {
         display: block;
         position: absolute;
         top: 50px;
-        right: 50px;
+        right: 50px; position: fixed;
       
         z-index: 1;
       
@@ -209,7 +209,7 @@ html {
         height: 400px;
         scroll-snap-align: center;
         margin-right: 0px;
-        background: rgb(255, 252, 244);
+        background: rgb(255, 255, 255);
         transform-origin: center center;
         transform: scale(1);
       }
