--- a/assets/common.css
+++ b/assets/common.css
@@ -2,11 +2,33 @@ body{background-color: rgb(255, 255, 255); padding: 0px;
 }
 
 .logo{ 
-	position:fixed; 
+
+  position: sticky;
   width: 5px;
   height: 3px;
 	top:0; 
 	left:0; 
+}
+
+
+header {
+  background-color: #fff;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+}
+
+.h1 {
+  color: white;
+	font-size: 40px;
+	-webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: black;
+}
+
+}
+.site-logo {
+  margin-left: 20px;
 }
 
 html {
@@ -14,25 +36,18 @@ html {
 }
 
 .face1 {
+   position:absolute;
+    }
   
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-} 
+    <!--transform: translate(-50%, -50%);-->
+
 .face2{
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
+  position:absolute;
+    }
 
 .face3{
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-      }
+  position:absolute;
+    }
       
     p{
       font-family: 'Source Code Pro', monospace; font-size: 15px; line-height: 1.6;
@@ -129,7 +144,7 @@ html {
       
       #menu {
         position: absolute;
-        width: 300px;
+        width: 400px;
         margin: -100px 0 0 0;
         padding: 50px;
         padding-top: 125px;
