--- a/assets/common.css
+++ b/assets/common.css
@@ -35,17 +35,21 @@ html {
 }
 
 .face1 {
-   position:absolute;
+   position:absolute;top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
     }
-  
-    <!--transform: translate(-50%, -50%);-->
 
 .face2{
-  position:absolute;
+  position:absolute;top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
     }
 
 .face3{
-  position:absolute;
+  position:absolute;top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
     }
       
     p{
@@ -54,7 +58,7 @@ html {
     }
 
     h2{font-family: 'Italiana', serif; font-size: 30px;
-      padding-left: 35px; padding-right: 35px;
+      padding-left: 35px; pad ding-right: 35px;
       
     }
     
