--- a/assets/common.css
+++ b/assets/common.css
@@ -293,3 +293,21 @@ justify-content: center;
         margin-left: -100px;
         text-align: center;
       }
+
+      .bodycolumn {
+        float: left;
+        width: 50%;
+        padding: 10px;
+        height: 300px;
+      }
+
+      .column {
+        float: right;
+        width: 50%;
+        padding: 15px;
+      }
+    
+      @media screen and (max-width:900px) {
+        .column {
+          width: 100%;
+        }      
