--- a/assets/common.css
+++ b/assets/common.css
@@ -1,10 +1,13 @@
-body {
-  background-image: "KG.jpg";
-  background-position: center center;
+.body {
+  background-position: center center; height: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  color: #000000;
+}
+
+.h1{
+  font-family: 'Familjen Grotesk', sans-serif;
+
 }
 
 .logo{ 
@@ -51,12 +54,9 @@ html {
     }
       
     p{
-      font-family: 'Source Code Pro', monospace; font-size: 17px; line-height: 1.6;
+      font-family: 'Source Code Pro', monospace; font-size: 16px; line-height: 1.6;
       padding-left: 35px; padding-right: 35px;
     }
-
-    h2{font-family: 'Italiana', serif; font-size: 30px;
-      padding-left: 35px; padding-right: 35px;
       
     }
     
@@ -295,7 +295,7 @@ html {
       .bodycolumn {
         float: left;
         width: 50%;
-        padding: 5px;
+        padding: 55px;
         height: 100px;
       } 
 
@@ -303,27 +303,42 @@ html {
         width: 50%;
         float: right;
         padding: 0px;
-      }
-      
-      @media screen and (max-width:900px) {
+      }  @media screen and (max-width:700px) {
         .methodimage {
-          width: 100%;
-        }    
-
-        @media screen and (max-width: 600px) {
-          .bodycolumn {
-            width: 100%;
-          }
+          width: 90%; 
+        }   }
+      
+      .bodycolumn:after {
+        content: "";
+        display: table;
+        clear: both;
+      }  @media screen and (max-width: 700px) {
+        .bodycolumn {
+          width: 100%; padding: 5px;
         }
+      }
+
+        .row:after {
+          content: "";
+          display: table;
+          clear: both;
+        } 
 
         .footer {
-          position: fixed;
           left: 0;
-          bottom: 0;
+          bottom: 0; height: 500px;  background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
           width: 100%;
-          background-color: rgb(0, 0, 0);
-          color: white;
+          background-color: rgb(255, 255, 255);
           text-align: center;
+          
        }
+      
+       div.ex1 {
+        width: 500px;
+        margin: auto;
+        border: 3px solid #73AD21;
+      }
        
 
