--- a/assets/common.css
+++ b/assets/common.css
@@ -1,5 +1,5 @@
 .body {
-  background-position: center center; height: 100%;
+  background-position: 0 0, center; width: auto;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -300,17 +300,19 @@ html {
       } 
 
       .methodimage {
-        width: 50%;
+        width: 40%;
         float: right;
-        padding: 0px;
-      }  @media screen and (max-width:700px) {
+        padding: 55px;
+      } 
+      
+      @media (max-width:700px) {
         .methodimage {
-          width: 90%; 
+          width: 90%;
         }   }
       
       .bodycolumn:after {
         content: "";
-        display: table;
+        display: table; 
         clear: both;
       }  @media screen and (max-width: 700px) {
         .bodycolumn {
@@ -323,22 +325,4 @@ html {
           display: table;
           clear: both;
         } 
-
-        .footer {
-          left: 0;
-          bottom: 0; height: 500px;  background-position: center;
-          background-repeat: no-repeat;
-          background-size: cover;
-          width: 100%;
-          background-color: rgb(255, 255, 255);
-          text-align: center;
-          
-       }
-      
-       div.ex1 {
-        width: 500px;
-        margin: auto;
-        border: 3px solid #73AD21;
-      }
-       
 
