--- a/assets/common.css
+++ b/assets/common.css
@@ -5,18 +5,26 @@
   background-size: cover;
 }
 
-.h1{
-  font-family: 'Familjen Grotesk', sans-serif;
+h1{
+  font-family: 'Familjen Grotesk';
+  font-size:10vw; 
+  -webkit-text-fill-color: rgb(0, 0, 0); background-color: #000000;
+  padding-bottom: 5px;
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: rgb(218, 218, 218);
+  text-align: center;"
 }
 
 h2{
-  font-size:2vw; font-family: 'Source Code Pro', monospace; 
-  margin-top: -8%; color: #ffffff; text-align: center;  padding-top: 20px;" 
+  font-size:3vw; font-family: 'Familjen Grotesk', monospace; 
+  margin-top: -8%; color: #bcbcbc; text-align: center;
+  padding-top: 20px; letter-spacing: 1px; word-spacing: 15px;" 
 }
 
 @media (max-width:700px) {
   h2 {
-     font-size: 12px; padding-top: 5px; color: rgb(35, 116, 255); 
+     font-size: 12px; padding-top: 5px; color: rgb(190, 190, 190);
+     letter-spacing: 1px; word-spacing: 6px;
   }   
  }
 
