--- a/assets/common.css
+++ b/assets/common.css
@@ -7,13 +7,25 @@
 
 h1{
   font-family: 'Familjen Grotesk';
-  font-size:10vw; 
-  -webkit-text-fill-color: rgb(0, 0, 0); background-color: #000000;
-  padding-bottom: 5px;
+  font-size:10vw;
+  -webkit-text-fill-color: rgb(0, 0, 0);
   -webkit-text-stroke-width: 0.5px;
   -webkit-text-stroke-color: rgb(218, 218, 218);
   text-align: center;"
 }
+
+@media (max-width:700px) {
+  h1 {
+    font-family: 'Familjen Grotesk'; margin-left: -2.3em;
+    font-size:16vw; 
+    -webkit-text-fill-color: rgb(0, 0, 0);
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: rgb(218, 218, 218);
+    content: "\a";
+  white-space: pre;"
+  }   
+ }
+
 
 h2{
   font-size:3vw; font-family: 'Familjen Grotesk', monospace; 
@@ -64,7 +76,7 @@ h2{
       
     p{
       font-family: 'Source Code Pro', monospace; font-size: 16px;
-      line-height: 1.3; padding-left: 30px; padding-right: 35px;
+      line-height: 1.3; padding-left: 10px; padding-right: 25px;
       color:rgb(182, 182, 182); letter-spacing: -1px; margin: 11px;
       ;margin-left: 30px;"
     } 
