--- a/assets/common.css
+++ b/assets/common.css
@@ -8,8 +8,8 @@
 h1{
   font-family: 'Familjen Grotesk';
   font-size:10vw;
-  -webkit-text-fill-color: rgb(0, 0, 0);
-  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-fill-color: rgba(0, 0, 0, 0);
+  -webkit-text-stroke-width: 1.5px;
   -webkit-text-stroke-color: rgb(218, 218, 218);
   text-align: center;"
 }
@@ -30,13 +30,13 @@ h1{
 h2{
   font-size:3vw; font-family: 'Familjen Grotesk', monospace; 
   margin-top: -8%; color: #bcbcbc; text-align: center;
-  padding-top: 20px; letter-spacing: 1px; word-spacing: 15px;" 
+  padding-top: 20px; letter-spacing: 1px; word-spacing: 10px;" 
 }
 
 @media (max-width:700px) {
   h2 {
-     font-size: 12px; padding-top: 5px; color: rgb(190, 190, 190);
-     letter-spacing: 1px; word-spacing: 6px;
+     font-size: 12px; padding-top: 1px; color: rgb(190, 190, 190);
+     letter-spacing: 1px; word-spacing: 1px;
   }   
  }
 
@@ -76,7 +76,7 @@ h2{
       
     p{
       font-family: 'Source Code Pro', monospace; font-size: 16px;
-      line-height: 1.3; padding-left: 10px; padding-right: 25px;
+      line-height: 1.6; padding-left: 10px; padding-right: 25px;
       color:rgb(182, 182, 182); letter-spacing: -1px; margin: 11px;
       ;margin-left: 30px;"
     } 
@@ -320,7 +320,7 @@ h2{
       }
 
       .methodimage {
-        width: 42%; margin-top: -6em;
+        width: 42%; margin-top: -7em;
         float: right; width: 45%;
         padding: 55px; 
       }  
@@ -333,7 +333,7 @@ h2{
 
       .bodycolumn {
         float: left;
-        width: 65%;
+        width: 60%;
         padding: 55px;
         height: 100px;
       } 
@@ -342,7 +342,7 @@ h2{
         .bodycolumn {
           width: 100%; padding: 3px; margin-top: -1em;
       }
-
+    } 
       .bodycolumn:after {
         content: "";
         display: table; 
@@ -350,8 +350,12 @@ h2{
       }  
         
       .konstantin {
-       padding: 55px;float: right; display: block;
-       margin-left: auto;
-       margin-right: auto;
+       padding-top: -3px; width: 30%; margin-left: 5em;
       }
+
+      @media screen and (max-width: 700px) {
+        .konstantin {
+          margin-top: 52em;
+      }
+    } 
 
