--- a/assets/common.css
+++ b/assets/common.css
@@ -358,93 +358,22 @@ h2{
           
       }}
     }
-    * {
-      padding: 0;
-      margin: 0;
+
+    .row {
+      float: ;
+      width: 60%;
+      padding: 15px; margin-left: 111px;
+      height: 100px;
     } 
-    .container {
-      width: 0%;
-      min-height: 100vh;
-      background: #333;
-    }
-    .image {
-      perspective: 3000px;
-      width: 100%; margin-top: 12em; margin-left:19em;
-      left: 50%; height: 200%;
-      transform: translate(-50%, -50%);
-      transform-style: preserve-3d;
-    }
 
     @media screen and (max-width: 700px) {
-      .image { 
-        perspective: 3000px;
-      width: 2%; margin-top: 12em; margin-left:19em;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      transform-style: preserve-3d;
-        
+      .row {
+        width: 100%; padding: 3px; margin-top: -1em;
     }}
-    .image img {
-      transform: rotateX(70deg) rotateZ(-90deg) translate3d(-120px, 0px, 70px);
-      box-shadow: -80px 60px 15px 5px rgba(0, 0, 0, 0.584);
-      transition: all .3s;
-      transform-style: preserve-3d;
-    }
-    .image:hover img {
-      transform: rotateX(0deg) rotateZ(0deg) translate3d(0px, 0px, 0px);
-      box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.0);
-    }
-
-
-    .item {
-      width: 50%;
-      position: relative;
-      left: 5rem;
-      top: 2rem;
-      filter: grayscale(100%);
-      transform: scale(0.8, 0.8) rotate(3deg);
-      transition: all 0.35s;
-    }
+  
+    .row:after {
+      content: "";
+      display: table; 
+      clear: both;
+    }}
     
-    .polaroid {
-      background: #fff;
-      padding: 1rem;
-      box-shadow: 0 0.2rem 1.2rem rgba(0, 0, 0, 0.2);
-    }
-    
-    .polaroid>img {
-      max-width: 100%;
-      height: auto;
-    }
-    
-    .item .polaroid:before {
-      content: '';
-      position: absolute;
-      z-index: -1;
-      transition: all 0.35s;
-    }
-    
-    .item .polaroid:before {
-      height: 20%;
-      width: 47%;
-      bottom: 0px;
-      box-shadow: 0 2.1rem 2rem rgba(0, 0, 0, 0.3);
-    }
-    
-    .item:hover {
-      filter: none;
-      transform: scale(1, 1) rotate(0deg) !important;
-      transition: all 0.35s;
-    }
-    
-    .item:hover .polaroid:before {
-      content: '';
-      position: absolute;
-      z-index: -1;
-      transform: rotate(0deg);
-      height: 90%;
-      width: 75%;
-      bottom: 0%;
-      box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.2);
-      transition: all 0.35s;
-    }
