--- a/assets/common.css
+++ b/assets/common.css
@@ -1,6 +1,6 @@
 .body {
   background-position: 0 0, center; width: auto;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; 
   background-attachment: fixed;
   background-size: cover;
 }
@@ -340,7 +340,7 @@ h2{
 
       @media screen and (max-width: 700px) {
         .bodycolumn {
-          width: 100%; padding: 3px; margin-top: -1em;
+          width: 100%; padding: 1px; margin-top: -1em;
       }}
     
       .bodycolumn:after {
@@ -366,7 +366,7 @@ h2{
 
   @media screen and (max-width: 700px) {
     blockquote {
-      width: 100%; padding: 50px; margin-top: 57em;
+      width: 100%; padding: 35px; margin-top: 57em;
   }}
 
   .block-line{
@@ -382,7 +382,7 @@ h2{
     position: bottom;
     left: 0;
     bottom: 0;
-    width: 100%;
+    width: auto;
     background-color: rgb(255, 255, 255);
     color: white;
     text-align: center;
@@ -395,57 +395,33 @@ h2{
 }}
 
  .button {
-  position: bottom;
-  left: 0; padding-left:50%; padding-right: 50%; padding-top: 1.5%; padding-bottom: 1.5%;
-  bottom: 0;
-  width: 100%;
+  position: bottom; float: left; 
+  width: 100%; font-family:'Source Code Pro', monospace ;
   background-color: rgb(0, 0, 0);
   color: white;
-  text-align: center;
  }
 
  @media screen and (max-width: 700px) {
   .button {
-    float: none; padding-left:50%; padding-right: 50%; padding-top: 1.5%; padding-bottom: 1.5%;
-    bottom: 0;
-    width: 100%;
+    padding-left:50%; padding-top: 15px; padding-bottom: 15px;
   }   
 
- .para1 {
+ .para2 {
   background-color: #ffffff; padding-left: 45px; font-size: 35px;color: rgb(124, 124, 124);
 font-family:'Source Code Pro', monospace ; padding-right: 5%; padding-top: 5px; float:right;
  }
 
  @media screen and (max-width: 700px) {
-  .para1 {
-    width: 100%; font-size: 20px;
+  .para2 {
+    width: 100%; font-size: 20px; padding-top: 25px; padding-bottom: 25px;
   }}
 
- .para2 {
-  background-color: #ffffff; padding-left: 95px; font-size: xxx-large;color: blue;
-  font-family:'Familjen Grotesk' ; padding-right: 20%; 
+ .para1 {
+  background-color: #ffffff; color: blue; font-size: 25px; float: left;
+  font-family:'Familjen Grotesk' ; 
  }
  @media screen and (max-width: 700px) {
-  .para2 {
-    width: 100%; font-size: 20px; padding-left: 55px; padding-right: 55px; margin-left: 0px;
-    margin-right: 0px;
+  .para1 {
+     font-size: 25.5px; float: left; padding-left: 60px;padding-right: 62px;
 }}
-
- .para3 {
-  background-color: #ffffff; padding-left: 95px; font-size: xxx-large; color: blue;
-  font-family:'Familjen Grotesk' ; padding-right:0px; 
- }
- @media screen and (max-width: 700px) {
-  .para3 {
-    width: 100%; font-size: 20px; padding-left: 55px; padding-right: 55px; margin-left: 0px;
-    margin-right: 0px;
-}}
-
- .para4 {
-  background-color: #ffffff; padding-left: 95px; font-size: xxx-large;color: blue;
-  font-family:'Familjen Grotesk' ; padding-right: 20%;
- }
- @media screen and (max-width: 700px) {
-  .para4 {
-    width: 100%; font-size: 20px; padding-left: 55px; padding-right: 15px; margin-left: 0px;
-    margin-right: 0px; 
+ 
