--- a/assets/common.css
+++ b/assets/common.css
@@ -7,17 +7,16 @@
 
 h1{
   font-family: 'Familjen Grotesk';
-  font-size:10vw;
+  font-size:10vw; float: left;
   -webkit-text-fill-color: rgba(0, 0, 0, 0);
   -webkit-text-stroke-width: 0.3px;
   -webkit-text-stroke-color: rgb(218, 218, 218);
-  text-align: center;"
 }
 
 @media (max-width:700px) {
   h1 {
-    font-family: 'Familjen Grotesk'; margin-left: -2.3em;
-    font-size:16vw; 
+    font-family: 'Familjen Grotesk'; margin-left: -1.3em;
+    font-size:16vw; text-align: center;
     -webkit-text-fill-color: rgb(0, 0, 0);
     -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: rgb(218, 218, 218);
@@ -25,13 +24,11 @@ h1{
   white-space: pre;"
   }   
  }
-
-
+ 
 h2{
-  font-size:3vw; font-family: 'Familjen Grotesk', monospace; 
-  margin-top: -8%; color: #bcbcbc; text-align: center;
-  padding-top: 20px; letter-spacing: 1px; word-spacing: 10px;" 
-}
+  font-size:3vw; font-family: 'Familjen Grotesk', monospace; float: left;
+  color: #bcbcbc; letter-spacing: 1px; word-spacing: 10px; padding-left: 400px;" 
+}}
 
 @media (max-width:700px) {
   h2 {
@@ -76,14 +73,13 @@ h2{
       
     p{
       font-family: 'Source Code Pro', monospace; font-size: 16px;
-      line-height: 1.6; padding-left: 10px; padding-right: 25px;
-      color:rgb(182, 182, 182); letter-spacing: -1px; margin: 11px;
-      ;margin-left: 30px;"
+      line-height: 1.6; padding-left: 25px; padding-right: 25px;
+      color:rgb(182, 182, 182); letter-spacing: -1px; float: left;
     } 
 
     @media (max-width:700px) {
       p {
-         padding-top: 175px;
+         padding-top: 175px; 
       }   
      }
     
@@ -320,14 +316,15 @@ h2{
       }
 
       .methodimage {
-        width: 42%; margin-top: -7em;
+        margin-top: -7em;
         float: right; width: 45%;
         padding: 55px; 
       }  
       
       @media (max-width:700px) {
         .methodimage {
-          width: 110%; margin-top: -11em; margin-right: -1.5em;
+          float: left;
+          width: 100%; margin-top: -10em; margin-right: -1.5em;
         }   
        }
 
@@ -366,7 +363,7 @@ h2{
 
   @media screen and (max-width: 700px) {
     blockquote {
-      width: 100%; padding: 35px; margin-top: 57em;
+      width: 100%; padding: 25px; margin-top: 55em;
   }}
 
   .block-line{
@@ -379,8 +376,7 @@ h2{
   }}
 
   .footer {
-    position: bottom;
-    left: 0;
+    left: 0; 
     bottom: 0;
     width: auto;
     background-color: rgb(255, 255, 255);
@@ -395,33 +391,37 @@ h2{
 }}
 
  .button {
-  position: bottom; float: left; 
-  width: 100%; font-family:'Source Code Pro', monospace ;
-  background-color: rgb(0, 0, 0);
-  color: white;
- }
+  left: 0; float: right;
+  bottom: 0; font-family:'Source Code Pro', monospace ; 
+  width: 100%; font-size: 21px; background-color: rgb(0, 0, 0);
+  color: white; padding-top: 15px; padding-bottom: 15px;
+  text-align: center;
+}
 
  @media screen and (max-width: 700px) {
   .button {
-    padding-left:50%; padding-top: 15px; padding-bottom: 15px;
-  }   
+    padding-left:35%; padding-top: 15px; padding-bottom: 15px;
+  }} 
+
+  .para1 {
+    background-color: #ffffff; color: blue; font-size: 55px; float: left;
+    font-family:'Familjen Grotesk' ; padding-left: 30%; padding-right: 30%;
+    padding-bottom: 0px; padding-top: 10px; width: 100%;
+   }
+   @media screen and (max-width: 700px) {
+    .para1 {
+       font-size: 25.5px; float: left; padding-left: 60px;padding-right: 62px;
+  }}
 
  .para2 {
-  background-color: #ffffff; padding-left: 45px; font-size: 35px;color: rgb(124, 124, 124);
-font-family:'Source Code Pro', monospace ; padding-right: 5%; padding-top: 5px; float:right;
+  background-color: #ffffff; padding-left: 30%; font-size: 35px;
+  color: rgb(189, 188, 188); padding-bottom: 80px;width: 100%; float: left;
+font-family:'Source Code Pro', monospace ; padding-right: 30%; padding-top: 31px;
  }
 
  @media screen and (max-width: 700px) {
   .para2 {
-    width: 100%; font-size: 20px; padding-top: 25px; padding-bottom: 25px;
+    width: 100%; font-size: 20px; padding-top: 25px; padding-bottom: 55px;
   }}
-
- .para1 {
-  background-color: #ffffff; color: blue; font-size: 25px; float: left;
-  font-family:'Familjen Grotesk' ; 
- }
- @media screen and (max-width: 700px) {
-  .para1 {
-     font-size: 25.5px; float: left; padding-left: 60px;padding-right: 62px;
-}}
+ 
  
