--- a/assets/common.css
+++ b/assets/common.css
@@ -1,14 +1,14 @@
 .body {
-  background-position: 0 0, center; width: auto;
+  background-position: 0 0, center; width: 100%;
   background-repeat: no-repeat; background-color: black;
   background-attachment: fixed;
   background-size: cover;
 }
 
 h1{
-  font-family: 'Familjen Grotesk'; background-color: rgb(241, 37, 37);
-  font-size:10vw; float: left;
-  -webkit-text-fill-color: rgba(0, 0, 0, 0);
+  font-family: 'Familjen Grotesk'; background-color: rgb(0, 0, 0);
+  font-size:10vw; float: left; margin-bottom: -1px; margin-left: 45px;
+  -webkit-text-fill-color: rgba(0, 0, 0, 0); 
   -webkit-text-stroke-width: 0.3px;
   -webkit-text-stroke-color: rgb(218, 218, 218);
 }
@@ -21,7 +21,7 @@ h1{
  
 h2{
   font-size:3vw; font-family: 'Familjen Grotesk', monospace; float: left; background-color: black;
-  color: #bcbcbc; letter-spacing: 1px; word-spacing: 10px; padding-left: 25%;" 
+  color: #bcbcbc; letter-spacing: 1px; word-spacing: 10px; padding-left: 25%; margin-bottom: 75px;" 
 }
 
 @media (max-width:700px) {
@@ -327,13 +327,14 @@ h2{
       
     blockquote{
       color: #b0b0b0; font-family: 'Source Code Pro', monospace; font-size: 16px;
-      line-height: 1.6; width: 70%; background-color: #000000; padding-left: 80px; padding-right: 60px
-      ; letter-spacing: -1px ; padding-top: 0px; margin: 0;padding-bottom: 0px; 
+      line-height: 1.6; width: 70%; background-color: #000000; padding-left: 80px;
+      padding-right: 60px
+      ; letter-spacing: -1px ;
   }
 
   @media screen and (max-width: 700px) {
     blockquote {
-      width: 100%; padding: 25px; margin-top: 55em;
+      width: 100%; padding: 25px; margin-top: 5em;
   }}
 
   @media screen and (max-width: 700px) {
@@ -343,7 +344,7 @@ h2{
 
   .text{
     color: #000000; font-family: 'Source Code Pro', monospace; font-size: 16px; float: left;
-    line-height: 1.6; width: 100%; background-color: #ffffff; padding-left: 20%; padding-right:  20%
+    line-height: 1.6; width: 100%; background-color: #ffffff; padding-left: 20%; padding-right:20%
     ; letter-spacing: -1px ; padding-top: 5%; margin: 0;padding-bottom: 5%; 
 }
   .footer {
