--- a/assets/common.css
+++ b/assets/common.css
@@ -15,7 +15,7 @@ h1{
 
 @media (max-width:700px) {
   h1 {
-    width: 100%;padding-left: 12%;
+    width: 100%;padding-left: 9%; float: right; margin-left: 0px; margin-right: 0px;
   }   
  }
  
@@ -27,6 +27,7 @@ h2{
 @media (max-width:700px) {
   h2 {
     padding-right: 10%; font-size: 4vw; padding-left: 50px; padding-right: 35px;
+    margin-bottom: 0px;
   }   
  }
 
@@ -320,21 +321,21 @@ h2{
       
       @media (max-width:700px) {
         .methodimage {
-          float: left;
-          width: 100%; margin-top: -10em; margin-right: -1.5em;
+          margin-left: 5px; padding-left: 125px; padding-right: 0px;
+          width: 124%; margin-top: -2em; margin-right: 15px; padding-bottom: 30px;
         }   
        }
       
     blockquote{
       color: #b0b0b0; font-family: 'Source Code Pro', monospace; font-size: 16px;
       line-height: 1.6; width: 70%; background-color: #000000; padding-left: 80px;
-      padding-right: 60px
-      ; letter-spacing: -1px ;
+      padding-right: 60px ; letter-spacing: -1px ;
   }
 
   @media screen and (max-width: 700px) {
     blockquote {
-      width: 100%; padding: 25px; margin-top: 5em;
+      width: 100%; padding-left: 33px; margin-top: 5em; padding-right: 30px; margin-left: 0px;
+      margin-left: 0px;
   }}
 
   @media screen and (max-width: 700px) {
@@ -345,8 +346,14 @@ h2{
   .text{
     color: #000000; font-family: 'Source Code Pro', monospace; font-size: 16px; float: left;
     line-height: 1.6; width: 100%; background-color: #ffffff; padding-left: 20%; padding-right:20%
-    ; letter-spacing: -1px ; padding-top: 5%; margin: 0;padding-bottom: 5%; 
+    ; letter-spacing: -1px ; padding-top: 5%; padding-bottom: 5%; 
 }
+
+@media screen and (max-width: 700px) {
+  .text {
+    width: 100%; padding-left: 35px; padding-right: 35px;
+}}
+
   .footer {
     left: 0; 
     bottom: 0;
@@ -366,8 +373,8 @@ h2{
   left: 0; float: right;
   bottom: 0; font-family:'Source Code Pro', monospace ; 
   width: 100%; font-size: 16px; background-color: rgb(0, 0, 0);
-  color: white; padding-top: 15px; padding-bottom: 15px;
-  text-align: center; 
+  color: rgb(255, 255, 255); padding-top: 15px; padding-bottom: 15px;
+  text-align: center;
 }
 
   .para1 {
@@ -390,4 +397,3 @@ font-family:'Source Code Pro', monospace ; padding-right: 30%; padding-top: 31px
   .para2 {
     width: 100%; font-size: 20px; padding-top: 25px; padding-bottom: 55px;
   }}
- 
