--- a/assets/common.css
+++ b/assets/common.css
@@ -96,7 +96,7 @@ h2{
         display: block;
         position: absolute;
         top: 47px;
-        right: 50px; position: fixed;
+        right: 40px; position: fixed;
       
         z-index: 1;
       
@@ -395,4 +395,24 @@ font-family:'Source Code Pro', monospace ; padding-right: 30%; padding-top: 31px
  @media screen and (max-width: 700px) {
   .para2 {
     width: 100%; font-size: 20px; padding-top: 25px; padding-bottom: 35px;
+  }}
+
+  .para3 {
+    background-color: #ffffff; color: blue; font-size: 55px; float: left;
+    font-family:'Familjen Grotesk' ; padding-left: 30%; padding-right: 30%;
+    padding-bottom: 60px; padding-top: 0px; width: 100%;
+   }
+   @media screen and (max-width: 700px) {
+    .para3 {
+       font-size: 40px; float: left; padding-left: 40px;padding-right: 40px;
+  }}
+
+  .para4 {
+    background-color: #ffffff; color: blue; font-size: 55px; float: left;
+    font-family:'Familjen Grotesk' ; padding-left: 30%; padding-right: 30%;
+    padding-bottom: 60px; padding-top: 0px; width: 100%;
+   }
+   @media screen and (max-width: 700px) {
+    .para4 {
+       font-size: 40px; float: left; padding-left: 40px;padding-right: 40px;
   }}
