--- a/assets/common.css
+++ b/assets/common.css
@@ -8,7 +8,7 @@
 h1{
   font-family: 'Familjen Grotesk'; background-color: rgb(0, 0, 0);
   font-size:10vw; float: left; margin-bottom: -1px; margin-left: 3px;
-  -webkit-text-fill-color: rgba(0, 0, 0, 0); 
+  -webkit-text-fill-color: rgba(0, 0, 0, 0);
   -webkit-text-stroke-width: 0.3px;
   -webkit-text-stroke-color: rgb(218, 218, 218);
 }
@@ -20,7 +20,7 @@ h1{
  }
  
 h2{
-  font-size:3vw; font-family: 'Familjen Grotesk', monospace; float: left; background-color: black;
+  font-size:3vw; font-family: 'Familjen Grotesk', monospace; float: left; background-color: black; width: 100%;
   color: #bcbcbc; letter-spacing: 1px; word-spacing: 10px; padding-left: 25%; margin-bottom: 75px;" 
 }
 
@@ -209,7 +209,7 @@ h2{
         display: flex;
         justify-content: center;
          
-        );
+        ;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -388,7 +388,7 @@ h2{
 
  .para2 {
   background-color: #ffffff; padding-left: 30%; font-size: 35px;
-  color: rgb(189, 188, 188); padding-bottom: 80px;width: 100%; float: left;
+  color: rgb(160, 160, 160); padding-bottom: 80px;width: 100%; float: left;
 font-family:'Source Code Pro', monospace ; padding-right: 30%; padding-top: 31px;
  }
 
