Updated slider overflow & navigation

--- a/assets/common.css
+++ b/assets/common.css
@@ -48,8 +48,8 @@ h2{
 }
 
 .face {
-   position:absolute;top: 50%;
-   left: 50%; width: 40%;
+   position:absolute;top: 55%;
+   left: 50%; width: 40%; width: 60%;
    transform: translate(-50%, -50%);
     }
     
@@ -203,13 +203,13 @@ h2{
         justify-content: center;
         height: 100%;
         position: absolute;
-        top: 45vh;
+        top:75vh;
       }
       
       .slider {
         width: 100%;
         max-width: 1500px;
-        height: 400px;
+        height: 450px;
         margin: 60px;
         text-align: center;
         border-radius:0px;
@@ -232,10 +232,10 @@ h2{
       .slide {
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: baseline;
         flex-shrink: 0;
         width: 100%;
-        height: 400px;
+        height: 500px;
         scroll-snap-align: center;
         margin-right: 0px;
         background: rgb(255, 255, 255);
@@ -244,9 +244,8 @@ h2{
       }
       
       .slide__text {
-        font-size: 50px;
-        font-weight: bold;
-        font-family: 'Source Code Pro', monospace;      
+        font-size: 21px; padding: 160px;
+        font-family: 'Source Code Pro';      
       }
       
       .slide a {
