--- a/assets/common.css
+++ b/assets/common.css
@@ -5,6 +5,10 @@
   background-size: cover;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 h1{
   font-family: 'Familjen Grotesk'; background-color: rgb(0, 0, 0);
   font-size:10vw; float: left; margin-bottom: -1px; margin-left: 3px;
@@ -191,13 +195,7 @@ h2{
       }
       
       .slider-container {
-        width: 100%;
-        position: relative;
-        top: 53vh;
-        display: flex;
-        justify-content: center;
-         
-        ;
+        width: 100%; padding-bottom: 0px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -231,21 +229,21 @@ h2{
       
       .slide {
         display: flex;
-        justify-content: center;
+        justify-content: end;
         align-items: baseline;
-        flex-shrink: 0;
+        flex-shrink: 0; padding-bottom: 0px; margin-bottom: 0px;
         width: 100%;
-        height: 500px;
+        height: 330px;
         scroll-snap-align: center;
         margin-right: 0px;
         background: rgb(255, 255, 255);
-        transform-origin: center center;
         transform: scale(1);
       }
       
       .slide__text {
-        font-size: 21px; padding: 160px;
-        font-family: 'Source Code Pro';      
+        font-size: 21px; padding-left: 150px; padding-right: 150px; padding-top: 40px;
+        padding-bottom: 0px;
+        font-family: 'Source Code Pro';
       }
       
       .slide a {
