Made index.html slider & text mobile responsive

--- a/assets/common.css
+++ b/assets/common.css
@@ -1,7 +1,7 @@
 .body {
   background-position: 0 0, center; width: 100%;
   background-repeat: no-repeat; background-color: black;
-  background-attachment: fixed;
+  background-attachment: fixed;}
   background-size: cover;
 }
 
@@ -205,7 +205,6 @@ h2{
         #menu {
           transform: none;
           opacity: 0;
-      
           transition: opacity 100s cubic-bezier(0.77, 0.2, 0.05, 1.0);
         }
       }
@@ -216,17 +215,10 @@ h2{
         align-items: center;
         justify-content: center;
         height: 100%;
-        position: absolute;
         top:75vh;
       }
-
-      @media screen and (max-width: 700px) {
-        .slider-container {
-          width: 100%; padding: 0px; height: 60%;
-      }}
       
       .slider {
-        width: 100%;
         max-width: 1500px;
         height: 450px;
         margin: 60px;
@@ -236,8 +228,13 @@ h2{
         position: relative; 
       }
 
+      @media screen and (max-width: 700px) {
+        .slider {
+          margin: 30px; margin-top: 50px;
+      }}
+
       .slides {
-        display: flex;
+        display: flex; height: 1000px;
         overflow-x: scroll;
         position: relative;
         scroll-behavior: smooth;
@@ -260,6 +257,18 @@ h2{
         background: rgb(255, 255, 255);
         transform: scale(1);
       }
+
+      @media screen and (max-width: 700px) {
+        .slide {
+          display: flex;
+        align-items: center;
+        flex-shrink: 0; padding-bottom: 50px; margin-bottom: 50px;
+        width: 100%;float: left;
+        height: 500px;
+        margin-right: 0px;
+        background: rgb(255, 255, 255);
+        transform: scale(1);
+      }}
       
       .slide__text {
         font-size: 21px; padding-left: 150px; padding-right: 150px; padding-top: 40px;
@@ -268,7 +277,8 @@ h2{
 
       @media screen and (max-width: 700px) {
         .slide__text {
-          width: 100%; font-size: 16px; padding: 10px;
+          width: 100%; font-size: 16px; padding-left: 50px; padding-right: 50px;
+          padding-top: 50px; padding-bottom: 90px; 
       }}
       
       .slide a {
@@ -295,13 +305,13 @@ h2{
       .slide__prev,
       .slide__next {
         position: absolute;
-        top: 35%;
+        top: 40%;
         width: 20px;
         height: 20px;
         border: solid rgb(5, 59, 237);
         border-width: 0 3px 3px 0;
         padding: 0px;
-        box-sizing: border-box;
+        box-sizing: content-box;
       }
       
       .slider::before,
@@ -315,7 +325,7 @@ h2{
       .slider__nav {
         box-sizing: border-box;
         position: absolute;
-        bottom: 5%;
+        bottom: 0%;
         left: 50%;
         width: 100%;
         margin-left: -100px;
